gif added, css styling done

--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,9 @@ output:
 bibliography: references.bib  
 ---
 
-[This assignment is for ETC5521 Assignment 1 by Team `r rmarkdown::metadata$team` comprising of `r knitr::combine_words(rmarkdown::metadata$author)`.]{style="color:#006DAE;"}
+[This assignment is for ETC5521 Assignment 2 by Team `r rmarkdown::metadata$team` comprising of `r rmarkdown::metadata$author[1]` & `r rmarkdown::metadata$author[2]`.]{style="color:#006DAE;"}
+
+![](https://media.giphy.com/media/3oxHQlREH7ufJK4yYg/giphy.gif)
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
@@ -37,6 +39,32 @@ library(readxl)
 library(naniar)
 library(lubridate)
 ```
+
+```{css}
+body{
+  text-align: justify;
+}
+
+h1.title {
+  text-align: center;
+}
+
+h3.subtitle {
+  color: crimson;
+  text-align: center;
+}
+
+h4.author {
+  color: black;
+  text-align: center;
+}
+
+h4.date {
+  text-align: center;
+}
+
+```
+
 
 # Introduction and motivation
 
@@ -208,6 +236,7 @@ tibble(variables_3,class_3,desc_3) %>%
   kable_styling(bootstrap_options = "hover")
 ```
 
+## Missing values
 
 ```{r check-missing,message=FALSE,warning=FALSE,fig.cap="Missing values in table country_totals"}
 library(naniar)
@@ -631,7 +660,7 @@ Just like Norway, every other country has a very low amount of pumped hydro powe
 
 ## How efficient is it to produce electricity using Pumped Hydro power?
 
-```{r pumped-power,message=FALSE,warning=FALSE,fig.cap= "Difference between electricity produced & absorbed by pumped hydro power",fig.width= 10}
+```{r pumped-power,message=FALSE,warning=FALSE,fig.cap= "Difference between electricity produced & absorbed by pumped hydro power",fig.width= 9}
 hydro <- energy_types %>% 
   #filtering the pumped hydro power energy for a new dataframe 
   filter(type == "Pumped hydro power") %>% 
@@ -769,3 +798,4 @@ Many countries have in fact surpassed their 2020 target level by 2018. Countries
 
 # References
 
+@energygif
