--- a/references.bib
+++ b/references.bib
@@ -154,3 +154,9 @@ title={Hydropower And Pumped Storage},
 url={https://www.altenergymag.com/article/2015/11/hydropower-and-pumped-storage/22104#:~:text=The pumped storage provides a,enabling additional system peak capacity.&text=Hydropower or water power is,be harnessed for useful purposes.},
 journal={AltEnergyMag}
 }
+
+@misc{energygif,
+url={https://media.giphy.com/media/3oxHQlREH7ufJK4yYg/giphy.gif},
+journal={GIPHY},
+year={2020}
+}
